clang/test/BSC/Negative/Method/Enum/enum_redefinition_member/enum_redefinition_member.cbs
// RUN: %clang_cc1 -verify %s

enum F {
    increase // expected-note {{previous definition is here}}
};
void enum F::increase(enum F* this) { // expected-error {{redefinition of 'increase' as different kind of symbol}}
    
}
